@@ -1,6 +1,6 @@
 '\"
 .\" $Format: ".TH RGLCLOCK 1 \"$Date$\"" $
-.TH RGLCLOCK 1 "Tue, 13 Jul 1999 17:40:10 +0900"
+.TH RGLCLOCK 1 "Fri, 16 Jul 1999 17:17:41 +0900"
 .SH NAME
 rglclock \- rotating 3D clock
 .SH SYNOPSIS
@@ -18,21 +18,29 @@ The clock will keep rotating until you stop it.
 accepts all standard GTK+ options.
 .TP
 \fB-m\fR, \fB--hide-menu-bar\fR
-Hide manu bar.
+Hide manu bar.  If this option is specified, there is no way to show
+the menu bar without restarting.
+.TP
+\fB--private-colormap\fR
+Allocate a private colormap.
 .TP
 \fB--help\fR
 Print help and exit.
 .TP
 \fB--version\fR
 Output version information and exit.
-.SH "POP-UP MENU"
-Pressing button 3 of the mouse pops up a menu.
+.SH "MENU COMMANDS"
+.SS File
 .TP
-\fBAbout...\fR
-show the about dialog.
+\fBOptions...\fR
+Open the Options dialog.  Currently, only the update rate can be
+changed with the dialog.
 .TP
 \fBExit\fR
-close the window and terminate \fBrglclock\fR.
+Close the window and terminate \fBrglclock\fR.
+.TP
+\fBAbout...\fR
+Show the About dialog.
 .SH BUGS
 The window geometry should be specifiable by a command line option.
 .PP
