@@ -1,3 +1,7 @@
+1999-07-16  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
+
+	* ja.po: Updated.
+
 1999-05-22  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
 	* ja.po: Updated with new messages.
